# cs-hello-world

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
hello/: __init__.py  hello.py
tests/: test_goodbye.py  test_hello.py
